ie fix for spacing

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -35,12 +35,12 @@ p { font-size:1em; }
 
 /*vertical align*/
 #wrapper {
-    display: flex;            /* establish flex container */
-    align-items: center;      /* vertically center flex items */
+  display: flex;            /* establish flex container */
+  align-items: center;      /* vertically center flex items */
 }
 #block {
-    /* vertical-align: middle; */
-    padding:0px 25px;
+  /*vertical-align: middle;*/
+  padding:0px 25px;
 }
 
 .active {
@@ -175,7 +175,7 @@ NAVBAR
   }
   .btNav:hover {
     margin-left:5px !important; 
-    color:#2cb5b1 !important;
+    color:#4a4a4a !important;
   }
   #closeMenu {
     color:#fff !important;
@@ -218,7 +218,7 @@ NAVBAR
   margin-right:20px;
 }
 #closeMenu:hover {
-  color:#2cb5b1;
+  color:#4a4a4a !important;
 }
 
 
@@ -251,6 +251,10 @@ INDEX
   .top-bottom-space-extra {
     padding-top:25px; 
     padding-bottom:25px; 
+  }
+  .top-bottom-space-extra-50 {
+    padding-top:50px; 
+    padding-bottom:50px; 
   }
   .top-bottom-space-extra-extra {
     padding-top:100px; 
@@ -296,7 +300,7 @@ INDEX
 		rgba(51,51,51,0.15)
 	),
   url('../resources/freeStock/pexels-photo-196464.jpeg') no-repeat center center;
-  min-height:62vh;
+  min-height:60vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -310,22 +314,31 @@ INDEX
 }
 
 /*section 1*/
+#section1 {
+  min-height:40vh;
+}
 .section1-1 {
-  min-height:38vh;
+  min-height:40vh;
   background-color:#2cb5b1;
   color:#fff;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 .section1-2 {
-  min-height:38vh;
+  min-height:40vh;
   background-color:#2cb5b1;
   color:#fff;
+  padding-top:25px;
+  padding-bottom:25px;
 }
 .section1-2 li a {
   color:#fff;
 }
 .section1-3 {
-  min-height:38vh;
+  min-height:40vh;
   text-align:center;
+  padding-top: 45px;
+  padding-bottom: 45px;
 }
 .section1-3 h3:nth-of-type(2) {
   color:#2cb5b1;
@@ -393,7 +406,7 @@ MEET THE DOCTOR
 /***  Medium Screens UP  ***/
 @media (min-width: 767px) {
   #hughes-headline {
-    min-height:60vh;
+    min-height:500px;
     padding-top:225px;
   }
   #hughes-section1 h2, #hughes-section3 h2, #hughes-section4 h2 {
@@ -487,11 +500,11 @@ SPECIALTIES
     padding-top:225px;
   }
   .spec-section5-1 {
-    min-height:30vh;
+    min-height:25vh;
     background-color:#e9e9e9;
   }
 .spec-section5-2 {
-    min-height:30vh;
+    min-height:25vh;
     background-color:#fff;
   }
 }
@@ -590,7 +603,7 @@ SPECIALTIES
 
 /*spection 5*/
 .spec-section5-3 {
-  min-height:30vh;
+  min-height:25vh;
   background-color:#e9e9e9;
 }
 
@@ -620,7 +633,7 @@ PATIENT INFO
     background-color:#e9e9e9;
   }
   #patient-headline {
-    min-height:60vh;
+    min-height:500px;
     padding-top:225px;
   }
   .patient-section1-1 {
@@ -697,6 +710,9 @@ PATIENT INFO
 .patient-section4-1, .patient-section4-2 {
   min-height:45vh;
 }
+.patient-section4-1 a, .patient-section4-2 a {
+  color:white;
+}
 
 
 /***************************************************************************
@@ -749,7 +765,7 @@ CONTACT
 }
 .contact-section1-3 {
   min-height:20vh;
-  background-color:#e9e9e9;
+  background-color:#fff;
   text-align:center;
 }
 .contact-section1-3 h2 {
